fix(ZDropButtonContent, ZDropListAutoHeightWrapper): fix prevent from overflow and height measure logic

--- a/src/components/ZDrop/styles/ZDrop.module.scss
+++ b/src/components/ZDrop/styles/ZDrop.module.scss
@@ -377,6 +377,10 @@
   list-style: none;
 }
 
+.zd__no-data {
+  width: 100%;
+}
+
 :where(.zd__option) {
   cursor: pointer;
 }
