--- a/src/stories/ZComponents/ZDropButton/styles/SbZDropButton.module.scss
+++ b/src/stories/ZComponents/ZDropButton/styles/SbZDropButton.module.scss
@@ -116,6 +116,7 @@
 
   &NoDataContent {
     padding: 10px 5px;
+    height: 100%;
     color: mget(global.$neonBlack, c0);
   }
 }
